feat: API documentation and error handling

--- a/src/crm-api/static/index.html
+++ b/src/crm-api/static/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Customer Backend API</title>
+    </head>
     <body>
         <h1>CRM Backend API</h1>
+        <p>
+            The customer backend API supports the following methods: 
+            <ul>
+                <li>Getting a single customer through a /customers/{id} path</li>
+                <li>Getting all customers through a the /customers path</li>
+                <li>Creating a customer through a /customers path</li>
+                <li>Updating a customer through a /customers/{id} path</li>
+                <li>Deleting a customer through a /customers/{id} path</li>
+            </ul>
+        </p>
+        <p>Complete documentation for the API can be found <a href="https://documenter.getpostman.com/view/2614461/2s8YszNA3Z">here</a></p>
     </body>
 </html>
